--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Saira+Stencil+One&family=Saira:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root {
+  --background-color: #F3F5F6;
+  --badge-color: #DE3838;
+  --hover-effect-color: brown;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Saira", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
