--- a/src/app/components/product-list/product-list.component.scss
+++ b/src/app/components/product-list/product-list.component.scss
@@ -44,4 +44,12 @@
       }
     }
   }
+
+  .product-list-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+  }
 }
