feat: criação de rota para mais detalhes do produto a partir do ID

--- a/src/app/components/product-list/product-card/product-card.component.html
+++ b/src/app/components/product-list/product-card/product-card.component.html
@@ -4,6 +4,7 @@
     alt=""
     width="250"
     height="250"
+    (click)="route.navigate(['productDetails/' + id])"
   />
   <div class="info-container">
     <p class="product-title">{{ title }}</p>
