feat: nova variável de cor global

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
   --border-bottom-color: #FFA585;
   --text-color-primary: #5D5D6D;
   --text-color-secondary: #737380;
+  --primary-button-color: #105887;
 }
 
 * {
