--- a/src/app/components/product-list/product-list.component.scss
+++ b/src/app/components/product-list/product-list.component.scss
@@ -1,11 +1,10 @@
 .main-container {
   width: 100%;
-  height: 1400px;
+  min-height: 100vh;
+  padding: 24px 0;
   background-color: var(--background-color);
 
   .filters-container {
-    padding: 24px 0;
-
     display: flex;
     justify-content: space-between;
 
@@ -16,6 +15,7 @@
       align-items: center;
       width: 100%;
       max-width: 375px;
+      cursor: pointer;
 
       .category-label {
         font-weight: 400;
@@ -33,6 +33,7 @@
 
     .order-by-container {
       .order-by-select {
+        cursor: pointer;
         background-color: var(--background-color);
         color: var(--text-color-secondary);
         padding: 8px;
@@ -40,6 +41,7 @@
       }
 
       .order-by-option {
+        cursor: pointer !important;
         background-color: white !important;
       }
     }
@@ -50,6 +52,6 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 32px;
+    gap: 42px;
   }
 }
